added transactions by collectionName
